# xmcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  annotation_overrides.json  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  progress.txt  pyproject.toml  render.yaml  server.py  test_grok_mcp.py  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml
auth/: client_registry.py  cors.py  models.py  oauth_server.py  signed_token.py  token_store.py  urls.py  x_oauth2.py
docs/: README.md  architecture.md  index.md  plan.md  sprints.md
examples/: test_grok_mcp.py
scripts/: smoke_oauth_remote.sh
src/: worker.ts
tests/: conftest.py  oauth_helpers.py  test_allowed_user_id.py  test_auth_middleware.py  test_auth_mode.py  test_client_registry.py  test_comma_params.py  test_cors.py  test_error_messages.py  test_filter_spec.py  test_health.py  test_import_compat.py  test_main.py  test_oauth_authorize_callback.py  test_oauth_metadata.py  test_oauth_register.py  test_oauth_server.py  test_oauth_token.py  test_rate_limits.py  test_retries.py  test_safety_annotations.py  test_smoke.py  test_token_store.py  test_x_oauth2.py
xmcp/: __init__.py  constants.py  env.py  http.py  mcp_app.py  openapi.py
